--- a/meetings-app-client/src/app/calender/calender.component.html
+++ b/meetings-app-client/src/app/calender/calender.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <h2>Calendar</h2>
-  <hr class="underline"/>
+  <hr class="underline" />
 
   <div class="calendar-header d-flex justify-content-between align-items-center mb-3">
     <div class="selected-date">
@@ -20,32 +20,29 @@
     </div>
   </div>
 
-  <div class="calendar-grid">
-    
-    <div *ngFor="let hour of hours" class="hour-slot-wrapper d-flex align-items-center">
-      <div class="hour-label">
-        {{ hour.label }}
-      </div>
 
-      <div class="hour-slot position-relative">
-        <ng-container *ngIf="hasMeetingAt(hour.value)">
-          <div
-            class="meeting"
-            *ngFor="let meeting of getMeetingsAt(hour.value)"
-            [ngStyle]="getMeetingStyles(meeting)"
-          >
-            <div class="meeting-label">
-              <strong>{{ meeting.name }}</strong>
-            </div>
-            <hr class="m-1">
-            <div class="meeting-attendees">
-              <strong>Attendees:</strong> 
-              <span *ngFor="let email of meeting.attendees; let isLast = last">
-                {{ email }}<span *ngIf="!isLast"> | </span>
-              </span>
-            </div>
-          </div>
-        </ng-container>
+  <div class="calendar-grid position-relative">
+    <div *ngFor="let hour of hours" class="hour-slot-wrapper">
+      <div class="hour-label">{{ hour.label }}</div>
+      <div class="hour-slot"></div>
+    </div>
+
+
+
+    <div
+      class="meeting"
+      *ngFor="let meeting of meetings"
+      [ngStyle]="getMeetingPosition(meeting)"
+    >
+      <div class="meeting-label">
+        <strong>{{ meeting.name }}</strong>
+        <hr class="mt-0 mb-0">
+      </div>
+      <div class="meeting-attendees">
+        <strong>Attendees:</strong>
+        <span *ngFor="let email of meeting.attendees; let isLast = last">
+          {{ email }}<span *ngIf="!isLast"> | </span>
+        </span>
       </div>
     </div>
   </div>
